Fix footer spacing

--- a/less/style.less
+++ b/less/style.less
@@ -551,7 +551,9 @@
   }
 
   // Place the Address block on the left and the User Menu block on the right
-  .make-row();
+  .region-footer {
+    .make-row();
+  }
   #block-block-1 {
     .make-sm-column(5);
     margin-bottom: @padding-large-vertical;
